# nbtvencoder

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  make-nbtv-still.pl  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: alphabet.apng  alphabet_demo.py  alphabet_demo.sh
src/nbtvencoder/: __init__.py  __main__.py  api.py  cli.py  emulator.py  emulator_cli.py  encoder.py  geometry.py  media.py
tests/: _helpers.py  conftest.py  test_api.py  test_cli.py  test_emulate_roundtrip.py  test_emulator.py  test_encoder.py  test_media.py  test_video.py
