[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nbtvencoder"
dynamic = ["version"]
description = "Encode still images and video into NBTV (Narrow-Bandwidth Television) WAV signals"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Josh Bailey" }]
keywords = ["nbtv", "televisor", "baird", "mechanical-television", "opencv", "wav", "encoder"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "numpy>=1.23",
    "opencv-python-headless>=4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
nbtvencoder = "nbtvencoder.cli:main"
nbtv-emulate = "nbtvencoder.emulator_cli:main"

[project.urls]
Homepage = "https://github.com/anarkiwi/nbtvencoder"
Repository = "https://github.com/anarkiwi/nbtvencoder"
"NBTV format" = "http://www.nbtv.wyenet.co.uk/sound.htm"

[tool.setuptools.dynamic]
version = { attr = "nbtvencoder._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nbtvencoder = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
